--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install
+            pip install .
             
       - run:
           name: run tests
