--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,21 @@ jobs:
       - image: circleci/python:3.6.1
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ .Branch }}-{{ checksum "setup.py" }}
+            - v1-dependencies-{{ .Branch }}
       - run:
           name: install dep
           command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install .
+            
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ .Branch }}-{{ checksum "setup.py" }}
             
       - run:
           name: run tests
